<resources>
    <string name="app_name">Shelter Seeker</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="logout_button_title">Logout</string>
    <string name="login_recovery_button_title">Forgot Password</string>

    <!-- Toast texts -->
    <string name="toast_to_be_implemented">This will be implemented in a later milestone</string>
    <string name="toast_login_canceled">Login canceled</string>
    <string name="toast_logged_out">Logged out!</string>
    <string name="title_activity_register">Register</string>
    <string name="toast_account_created">Account created</string>
    <string name="toast_reservation_canceled">Reservation canceled</string>
    <string name="toast_reservation_created">Reservation created</string>

    <!-- Strings related to registration -->
    <string name="registration_name">Name</string>
    <string name="registration_email">Email</string>
    <string name="registration_password">Password</string>
    <string name="registration_phoneNumber">Phone Number</string>
    <string name="registration_register">Register</string>
    <string name="registration_userType">I am…</string>
    <string name="error_password_requirements">Password must be at least 6 characters</string>
    <string name="error_email_already_registered">Email already registered</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_name">Please enter your first and last name</string>

    <!-- Shelter List Strings -->
    <string name="title_activity_shelter_list">Shelters</string>
    <string name="shelter_no_data_text">No Shelters Found</string>

    <!-- Shelter Detail Strings -->
    <string name="title_activity_shelter_detail">Shelter Details</string>
    <string name="shelter_name_default">Shelter Name</string>
    <string name="shelter_address_default">Shelter Address</string>
    <string name="shelter_phone_default">Phone Number</string>
    <string name="shelter_capacity">Capacity: %1$s (%2$d vacancies)</string>
    <string name="shelter_gender">Gender: %1$s</string>
    <string name="shelter_restrictions">Restrictions: %1$s</string>
    <string name="shelter_notes">Notes: %1$s</string>
    <string name="shelter_reserve">Reserve space</string>
    <string name="shelter_no_vacancies">No vacancy</string>
    <string name="shelter_cancel">Cancel reservation</string>
    <string name="shelter_res_loading">Loading…</string>
    <string name="shelter_res_call">Please call to reserve space</string>
    <string name="shelter_res_other">Space already reserved at another shelter</string>
    <string name="shelter_button_call">Call</string>
    <string name="shelter_button_directions">Directions</string>

    <!-- Bed Selector Strings -->
    <string name="selector_beds">Select number of beds</string>
    <string name="selector_okay">Okay</string>
    <string name="selector_cancel">Cancel</string>

    <!-- Shelter Filter Strings -->
    <string name="title_activity_shelter_filter">Filter Shelters</string>
    <string name="shelter_filter_name_label">Name:</string>
    <string name="shelter_filter_gender_label">Gender:</string>
    <string name="shelter_filter_gender_male">Male</string>
    <string name="shelter_filter_gender_female">Female</string>
    <string name="shelter_filter_gender_all">All</string>
    <string name="shelter_filter_age_label">Age:</string>
    <string name="shelter_filter_age_all">All</string>
    <string name="shelter_filter_age_newborn">Families with Newborns</string>
    <string name="shelter_filter_age_child">Children</string>
    <string name="shelter_filter_age_youngadults">Young Adults</string>
    <string name="shelter_filter_veteran_label">Veteran Status:</string>
    <string name="shelter_filter_veteran_check">Veteran</string>
    <string name="shelter_filter_button_label">Find Shelters</string>
    <string name="title_activity_map">Shelter Map</string>
</resources>
