<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/selector_beds"/>

    <NumberPicker
        android:id="@+id/reservation_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:layout_below="@+id/reservation_picker">

        <Button
            android:id="@+id/reservation_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selector_cancel"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/reservation_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selector_okay"
            style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>


</RelativeLayout>